8280020: Underline and line-through not straight in WebView